partman-auto (46) UNRELEASED; urgency=low

  * Renamed multi_user scheme to just "multi" as in multiple partitions.
    There are more uses for this scheme than multi user systems.

 -- Joey Hess <joeyh@debian.org>  Tue, 15 Nov 2005 19:54:27 -0500

partman-auto (45) unstable; urgency=low

  [ Fabio M. Di Nitto ]
  * Move 2 chunks of code from perform_recipe into recipes.sh and make them
    functions. This code is shared with partman-auto-lvm so there is very
    little point in duplicating it.

  [ Colin Watson ]
  * Use 'rm -f' rather than more awkward test-then-remove constructions.

  [ Sven Luther ]
  * Adapted to chrp_rs6k -> chrp_ibm transition.

  [ Frans Pop ]
  * Use gpt instead of msdos disklabel for disks larger than 2TB.

  [ Updated translations ]
  * Bengali (bn.po) by Baishampayan Ghose
  * French (fr.po) by Christian Perrier
  * Icelandic (is.po) by David Steinn Geirsson
  * Romanian (ro.po) by Eddy Petrişor
  * Swedish (sv.po) by Daniel Nylander
  
 -- Joey Hess <joeyh@debian.org>  Tue, 15 Nov 2005 19:25:01 -0500

partman-auto (44) unstable; urgency=low

  [ Updated translations ]
  * Greek, Modern (1453-) (el.po) by Greek Translation Team
  * Galician (gl.po) by Jacobo Tarrio
  * Kurdish (ku.po) by Erdal Ronahi
  * Romanian (ro.po) by Eddy Petrisor

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Sep 2005 17:28:03 +0200

partman-auto (43) unstable; urgency=low

  [ Frans Pop ]
  * Changed dependency from partman to partman-base.

  [ Sven Luther ]
  * Added prep recipes, as a plain copy of the chrp_rs6k ones. 

 -- Sven Luther <luther@debian.org>  Thu,  1 Sep 2005 13:04:10 +0200

partman-auto (42) unstable; urgency=low

  * Updated translations: 
    - Arabic (ar.po) by Ossama M. Khayat
    - Belarusian (be.po) by Andrei Darashenka
    - German (de.po) by Dennis Stampfer
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Esperanto (eo.po) by Serge Leblanc
    - Spanish (es.po) by Javier Fernández-Sanguino Peña