@@ -1,3 +1,7 @@
+This package adds to the main partitioning menu of partman an item
+`Automatically partition the storage devices'.  For each free space
+it also adds an item `Automatically partition this free space'.
+
 For a description of the format and use of recipe files and other important
 documentation, see installer/doc/devel/partman-auto-recipe.txt
 
